--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -43,8 +43,11 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
+# Install pnpm
+RUN npm install -g pnpm
+
 # Install all dependencies (including dev dependencies)
-RUN npm ci && npm cache clean --force
+RUN pnpm install && pnpm cache clean
 
 # Copy application code
 COPY . .
@@ -70,4 +73,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:3000/ || exit 1
 
 # Default command (can be overridden in docker-compose)
-CMD ["npm", "run", "dev"]
+CMD ["pnpm", "run", "dev"]
